# cloud_mesh

./: .gitignore  .null-ls_898179_start.py  Dockerfile  README.md  build.py  creds_setup.py  destroy.py  end.py  entry.sh  notes.md  providers.yaml  pyproject.toml  region_checks.py  requirements.txt  start.py  start.sh  stats.yml  vars_setup.py
ansible/: build.yml  deploy.yml  update.yml
ansible/playbooks/: add_port.yml  decommission.yml  update.yml
ansible/roles/deploy/tasks/: host1.yml  host2.yml  host3.yml  main.yml
ansible/roles/deploy/templates/: aws.tf.tmpl  azure.tf.tmpl  digitalocean.tf.tmpl  exoscale.tf.tmpl  gcp.tf.tmpl  linode.tf.tmpl  main.tf.tmpl  vars.tf.tmpl
docker/: Dockerfile  providers.tf  requirements.txt
modules/aws/: main.tf  outputs.tf  provider.tf
modules/azure/: main.tf  provider.tf
modules/digitalocean/: main.tf  provider.tf
modules/exoscale/: main.tf  provider.tf  vars.tf
modules/gcp/: main.tf  outputs.tf  provider.tf
modules/linode/: main.tf  outputs.tf  provider.tf
modules/vultr/: main.tf  outputs.tf  provider.tf
sr/: build.py  destroy.py  gen_ssh.py  main.py  pyproject.toml  start.py
sr/ansible/: build.yml  destroy.yml
sr/modules/: README.md
sr/modules/aws/: main.tf  provider.tf
sr/modules/exoscale/: main.tf  outputs.tf
sr/modules/linode/: provider.tf
sr/sr/: main.py  parse_state.py  providers.yaml
sr/sr/templates/: README.md  exoscale_vars.tf  gcp_vars.tf
sr/templates/: aws_vars.tf  digitalocean_vars.tf
templates/: aws_vars.tf  azure_vars.tf  linode_vars.tf  main.tf.j2  vultr_vars.tf
(+40 files in other folders)
