[tool.poetry]
name = "sr"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ['me']

[tool.poetry.scripts]
sr = "sr.main:app"


[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
ansible = "8.7.0"
loguru = "^0.7.2"
rich = "^13.7.1"
sshkey-tools = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
